--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongodb": "^3.1.3"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   }
 }
