--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./index.js",
     "start:dev": "nodemon ./index.js",
-    "test": "mocha \"controllers/**/*.test.js\" \"util/**/*.test.js\""
+    "test": "mocha \"controllers/**/*.test.js\" \"util/**/*.test.js\" \"integration_tests/index.js\""
   },
   "author": "",
   "license": "ISC",
