--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node ./index.js > ./logs/app.log 2>./logs/err.log",
     "start:dev": "nodemon ./index.js",
     "test": "mocha \"controllers/**/*.test.js\" \"util/**/*.test.js\" \"integration_tests/index.js\""
   },
